test/test_error_locations/test_ppx_css_rewrite_deprecated.mlt
open! Core
module Virtual_dom = Fake_ppx_css_runtime_for_native_tests
open Virtual_dom;;

#print_line_numbers true

module Style =
  [%css
  stylesheet
    {|
          .test {}
  |}
    ~rewrite:[ "hey", "not hey" ]]

[%%expect
  {|
Line 13, characters 15-31:
Error: The use of ~rewrite is deprecated, please use ~dont_hash or ~dont_hash_prefixes
       instead. Alternatively, consider writing all of your CSS in the same %css
       stylesheet incantation. Deprecating ~rewrite allows for more optimiztions in ppx_css,
       at the expense of expressibility. We've audited bonsai apps and believe this expressibility
       was unused so we've removed it. If this conflicts with your use case please reach out.
|}]

module Style =
  [%css
  stylesheet
    {|
          .test {}
  |}
    ~rewrite:[ "hey", "hey" ]]

[%%expect
  {|
Line 31, characters 15-27:
Error: The use of ~rewrite is deprecated, please use ~dont_hash or ~dont_hash_prefixes
       instead. Alternatively, consider writing all of your CSS in the same %css
       stylesheet incantation. Deprecating ~rewrite allows for more optimiztions in ppx_css,
       at the expense of expressibility. We've audited bonsai apps and believe this expressibility
       was unused so we've removed it. If this conflicts with your use case please reach out.
|}]
